load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "apu",
    srcs = [
        "apu.cc",
        "envelope.cc",
        "length_counter.cc",
        "noise.cc",
        "pulse.cc",
        "sweep.cc",
        "triangle.cc",
    ],
    hdrs = [
        "apu.h",
        "envelope.h",
        "length_counter.h",
        "noise.h",
        "pulse.h",
        "pulse_channel.h",
        "sweep.h",
        "triangle.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
    ],
)
