load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "mappers",
    srcs = [
        "ines.cc",
        # "mmc1.cc",
        "nrom.cc",
        "uxrom.cc",
    ],
    hdrs = [
        "ines.h",
        "mapper.h",
        # "mmc1.h",
        "nrom.h",
        "uxrom.h",
    ],
    visibility = ["//visibility:public"],
    deps = ["//src/mirroring"],
)
