load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "nes",
    srcs = ["nes.cc"],
    hdrs = [
        "audio_stream.h",
        "nes.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/cpu",
        "//src/mappers",
        "@SDL//:sdl",
        "@SFML//:sfml",
    ],
)
