load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "ppu",
    srcs = [
        "debug.cc",
        "ppu.cc",
        "state.cc",
    ],
    hdrs = [
        "ppu.h",
        "state.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/mappers",
        "//src/mirroring",
    ],
)
